feat: v1.2
