# app/api/v1/docs/swagger.json
@@ -106,6 +106,20 @@
                 "summary": "获取对齐目标列表",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "归属 1-部门 2-个人",
+                        "name": "ascription",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "okr id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "description": "目标（O）",
                         "name": "objective",
@@ -649,6 +663,109 @@
                 }
             }
         },
+        "/okr/company/list": {
+            "get": {
+                "description": "获取全公司OKR列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Okr"
+                ],
+                "summary": "获取全公司OKR列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "是否已完成未评分 0-未完成 1-已完成",
+                        "name": "completed",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "部门id",
+                        "name": "department_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "结束时间",
+                        "name": "end_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "目标（O）",
+                        "name": "objective",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "当前页，默认:1",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页显示数量，默认:50，最大:100",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "开始时间",
+                        "name": "start_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "类型 1-承诺型 2-挑战型",
+                        "name": "type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "用户id",
+                        "name": "userid",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/interfaces.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/interfaces.Pagination"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "data": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/interfaces.OkrResp"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/okr/confidence/update": {
             "post": {
                 "description": "更新信心指数",
@@ -783,12 +900,6 @@
                         "type": "integer",
                         "description": "是否已完成未评分 0-未完成 1-已完成",
                         "name": "completed",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "部门id",
-                        "name": "department_id",
                         "in": "query"
                     },
                     {
@@ -2185,6 +2296,9 @@
                 "ascription": {
                     "type": "integer"
                 },
+                "auto_sync": {
+                    "type": "integer"
+                },
                 "can_owner_update_score": {
                     "description": "KR负责人是否能修改评分",
                     "type": "boolean"
@@ -2467,6 +2581,10 @@
                     "description": "归属 1-部门 2-个人",
                     "type": "integer"
                 },
+                "auto_sync": {
+                    "description": "是否自动同步",
+                    "type": "integer"
+                },
                 "end_at": {
                     "description": "结束时间",
                     "type": "string"
@@ -2616,6 +2734,10 @@
                 "review": {
                     "description": "价值与收获",
                     "type": "string"
+                },
+                "superior_review": {
+                    "description": "上级评价",
+                    "type": "string"
                 }
             }
         },
@@ -2650,6 +2772,9 @@
                     "type": "integer"
                 },
                 "ascription": {
+                    "type": "integer"
+                },
+                "auto_sync": {
                     "type": "integer"
                 },
                 "can_owner_update_score": {
@@ -2823,6 +2948,10 @@
                     "description": "对齐目标",
                     "type": "string"
                 },
+                "auto_sync": {
+                    "description": "是否自动同步",
+                    "type": "integer"
+                },
                 "end_at": {
                     "description": "结束时间",
                     "type": "string"
@@ -2917,6 +3046,9 @@
                     "type": "integer"
                 },
                 "ascription": {
+                    "type": "integer"
+                },
+                "auto_sync": {
                     "type": "integer"
                 },
                 "can_owner_update_score": {
@@ -3156,6 +3288,9 @@
                     }
                 },
                 "review": {
+                    "type": "string"
+                },
+                "superior_review": {
                     "type": "string"
                 },
                 "updated_at": {
